attached_assets/Pasted--Error-Failed-to-load-resource-the-server-responded-with-a-status-of-403-basil-line-0-Debug-1751467372181_1751467372181.txt
[Error] Failed to load resource: the server responded with a status of 403 () (basil, line 0)
[Debug] [vite] connecting... (client, line 495)
[Debug] [vite] connected. (client, line 618)
[Info] Successfully preconnected to https://api.stripe.com/
[Error] Warning: React has detected a change in the order of Hooks called by ParentLogin. This will lead to bugs and errors if not fixed. For more information, read the Rules of Hooks: https://reactjs.org/link/rules-of-hooks

   Previous render            Next render
   ------------------------------------------------------
1. useContext                 useContext
2. useSyncExternalStore       useSyncExternalStore
3. useRef                     useRef
4. useInsertionEffect         useInsertionEffect
5. useState                   useState
6. useEffect                  useEffect
7. useContext                 useContext
8. useState                   useState
9. useState                   useState
10. useState                  useState
11. useContext                useContext
12. useContext                useContext
13. useContext                useContext
14. useEffect                 useEffect
15. useState                  useState
16. useCallback               useCallback
17. useSyncExternalStore      useSyncExternalStore
18. useEffect                 useEffect
19. useEffect                 useEffect
20. undefined                 useContext
   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

ParentLogin@https://1ee93227-7f72-4972-ae94-fa1ae08a6a22-00-3tl6gv7xl2x3x.picard.replit.dev/src/pages/parent-login.tsx:38:38
Route@https://1ee93227-7f72-4972-ae94-fa1ae08a6a22-00-3tl6gv7xl2x3x.picard.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/wouter.js:323:14
Switch@https://1ee93227-7f72-4972-ae94-fa1ae08a6a22-00-3tl6gv7xl2x3x.picard.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/wouter.js:380:27
Router@https://1ee93227-7f72-4972-ae94-fa1ae08a6a22-00-3tl6gv7xl2x3x.picard.replit.dev/src/App.tsx:42:33
TooltipProviderProvider@https://1ee93227-7f72-4972-ae94-fa1ae08a6a22-00-3tl6gv7xl2x3x.picard.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/chunk-W6PG6DRF.js:38:13
TooltipProvider@https://1ee93227-7f72-4972-ae94-fa1ae08a6a22-00-3tl6gv7xl2x3x.picard.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/@radix-ui_react-tooltip.js:60:43
QueryClientProvider@https://1ee93227-7f72-4972-ae94-fa1ae08a6a22-00-3tl6gv7xl2x3x.picard.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/@tanstack_react-query.js:2805:9
App
	printWarning (chunk-RPCDYKBN.js:521)
	error (chunk-RPCDYKBN.js:505)
	warnOnHookMismatchInDev (chunk-RPCDYKBN.js:11495)
	updateHookTypesDev (chunk-RPCDYKBN.js:11465)
	useContext (chunk-RPCDYKBN.js:12697)
	useQueryClient (@tanstack_react-query.js:2795)
	useMutation (@tanstack_react-query.js:3275)
	ParentLogin (parent-login.tsx:74)
	renderWithHooks (chunk-RPCDYKBN.js:11548)
	updateFunctionComponent (chunk-RPCDYKBN.js:14582)
	beginWork$1 (chunk-RPCDYKBN.js:19753)
	performUnitOfWork (chunk-RPCDYKBN.js:19198)
	workLoopSync (chunk-RPCDYKBN.js:19137)
	renderRootSync (chunk-RPCDYKBN.js:19116)
	performSyncWorkOnRoot (chunk-RPCDYKBN.js:18874)
	flushSyncCallbacks (chunk-RPCDYKBN.js:9119)
	(anonymous function) (chunk-RPCDYKBN.js:18627)
[Error] Error: Rendered more hooks than during the previous render.
	updateWorkInProgressHook (chunk-RPCDYKBN.js:11678:87)
	updateReducer (chunk-RPCDYKBN.js:11727)
	useState (chunk-RPCDYKBN.js:12753)
	useMutation (@tanstack_react-query.js:3276)
	ParentLogin (parent-login.tsx:74)
	renderWithHooks (chunk-RPCDYKBN.js:11548)
	updateFunctionComponent (chunk-RPCDYKBN.js:14582)
	callCallback2 (chunk-RPCDYKBN.js:3674)
	dispatchEvent
	invokeGuardedCallbackDev (chunk-RPCDYKBN.js:3699)
	invokeGuardedCallback (chunk-RPCDYKBN.js:3733)
	beginWork$1 (chunk-RPCDYKBN.js:19765)
	performUnitOfWork (chunk-RPCDYKBN.js:19198)
	workLoopSync (chunk-RPCDYKBN.js:19137)
	renderRootSync (chunk-RPCDYKBN.js:19116)
	performSyncWorkOnRoot (chunk-RPCDYKBN.js:18874)
	flushSyncCallbacks (chunk-RPCDYKBN.js:9119)
	(anonymous function) (chunk-RPCDYKBN.js:18627)
[Error] Error: Rendered more hooks than during the previous render.
	updateWorkInProgressHook (chunk-RPCDYKBN.js:11678:87)
	updateReducer (chunk-RPCDYKBN.js:11727)
	useState (chunk-RPCDYKBN.js:12753)
	useMutation (@tanstack_react-query.js:3276)
	ParentLogin (parent-login.tsx:74)
	renderWithHooks (chunk-RPCDYKBN.js:11548)
	updateFunctionComponent (chunk-RPCDYKBN.js:14582)
	callCallback2 (chunk-RPCDYKBN.js:3674)
	dispatchEvent
	invokeGuardedCallbackDev (chunk-RPCDYKBN.js:3699)
	invokeGuardedCallback (chunk-RPCDYKBN.js:3733)
	beginWork$1 (chunk-RPCDYKBN.js:19765)
	performUnitOfWork (chunk-RPCDYKBN.js:19198)
	workLoopSync (chunk-RPCDYKBN.js:19137)
	renderRootSync (chunk-RPCDYKBN.js:19116)
	recoverFromConcurrentError (chunk-RPCDYKBN.js:18736)
	performSyncWorkOnRoot (chunk-RPCDYKBN.js:18879)
	flushSyncCallbacks (chunk-RPCDYKBN.js:9119)
	(anonymous function) (chunk-RPCDYKBN.js:18627)
[Error] The above error occurred in the <ParentLogin> component:

ParentLogin@https://1ee93227-7f72-4972-ae94-fa1ae08a6a22-00-3tl6gv7xl2x3x.picard.replit.dev/src/pages/parent-login.tsx:38:38
Route@https://1ee93227-7f72-4972-ae94-fa1ae08a6a22-00-3tl6gv7xl2x3x.picard.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/wouter.js:323:14
Switch@https://1ee93227-7f72-4972-ae94-fa1ae08a6a22-00-3tl6gv7xl2x3x.picard.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/wouter.js:380:27
Router@https://1ee93227-7f72-4972-ae94-fa1ae08a6a22-00-3tl6gv7xl2x3x.picard.replit.dev/src/App.tsx:42:33
TooltipProviderProvider@https://1ee93227-7f72-4972-ae94-fa1ae08a6a22-00-3tl6gv7xl2x3x.picard.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/chunk-W6PG6DRF.js:38:13
TooltipProvider@https://1ee93227-7f72-4972-ae94-fa1ae08a6a22-00-3tl6gv7xl2x3x.picard.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/@radix-ui_react-tooltip.js:60:43
QueryClientProvider@https://1ee93227-7f72-4972-ae94-fa1ae08a6a22-00-3tl6gv7xl2x3x.picard.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/@tanstack_react-query.js:2805:9
App

Consider adding an error boundary to your tree to customize error handling behavior.
Visit https://reactjs.org/link/error-boundaries to learn more about error boundaries.
	logCapturedError (chunk-RPCDYKBN.js:14032)
	(anonymous function) (chunk-RPCDYKBN.js:14052)
	callCallback (chunk-RPCDYKBN.js:11248)
	commitUpdateQueue (chunk-RPCDYKBN.js:11265)
	commitLayoutEffectOnFiber (chunk-RPCDYKBN.js:17093)
	commitLayoutMountEffects_complete (chunk-RPCDYKBN.js:17980)
	commitLayoutEffects_begin (chunk-RPCDYKBN.js:17969)
	commitLayoutEffects (chunk-RPCDYKBN.js:17920)
	commitRootImpl (chunk-RPCDYKBN.js:19353)
	commitRoot (chunk-RPCDYKBN.js:19277)
	performSyncWorkOnRoot (chunk-RPCDYKBN.js:18895)
	flushSyncCallbacks (chunk-RPCDYKBN.js:9119)
	(anonymous function) (chunk-RPCDYKBN.js:18627)
[Error] Error: Rendered more hooks than during the previous render.
	flushSyncCallbacks (chunk-RPCDYKBN.js:9129)
	(anonymous function) (chunk-RPCDYKBN.js:18627)